Fixed some issues with the responsivness on smaller screen sizes

--- a/src/styles/UI/BaseFooter.scss
+++ b/src/styles/UI/BaseFooter.scss
@@ -1,7 +1,7 @@
 #footer {
   .contact {
     .card {
-      @media only screen and (max-width: 1440px) {
+      @media only screen and (max-width: 1960px) {
         .row {
           gap: 20px;
         }
@@ -9,6 +9,8 @@
 
       h2 {
         margin: 0;
+        line-height: 35px;
+        float: left;
       }
       background-color: $accent;
       border-radius: 15px;
@@ -18,6 +20,7 @@
       }
       p {
         margin: 0;
+       text-align: left;
       }
     }
   }
